--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
+    "bootswatch": "^4.6.0",
     "moment": "^2.29.1",
     "pondjs": "^0.9.0",
     "react": "^17.0.1",
