--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Bloxberg Monitoring",
-  "name": "Bloxberg Validator Monitoring App",
+  "short_name": "bloxberg Monitoring",
+  "name": "bloxberg Validator Monitoring App",
   "icons": [
     {
       "src": "favicon.ico",
