--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "Bloxberg Monitoring",
-  "name": "Bloxberg Validator Monitoring App",
+  "short_name": "bloxberg Monitoring",
+  "name": "bloxberg Validator Monitoring App",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "bloxberg-logo_X.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
